<resources>
    <string name="app_name">App_DataService</string>

    <string name="cpu_info">CPU</string>
    <string name="cpu_switch">CPU usage monitor</string>
    <string name="cpu_switchOn">CPU is monitoring</string>
    <string name="cpu_switchOff">CPU monitor has stopped</string>

    <string name="app_info">application usage storage</string>
    <string name="invalid_size_value">Couldn\u2019t compute package size.</string>
    <!-- [CHAR LIMIT=30] Manage applications, text telling using an application is not installed for the current user. The key part is that it's not installed. -->
    <string name="not_installed">Not installed for this user</string>
    <!-- [CHAR LIMIT=25] Manage applications, text telling using an application is disabled. -->
    <string name="disabled">Disabled</string>
    <!-- [CHAR LIMIT=25] Text shown when there are no applications to display. -->
    <string name="no_applications">No apps.</string>

    <string name="total_size" >"total size:"</string>
    <string name="data_size" >"data size:"</string>
    <string name="code_size" >"code size:"</string>
    <string name="cache_size" >"cache size:"</string>

    <string name="app_time">application usage time</string>

    <string name="system_memory">system memory</string>

    <string name="app_battery">app battery</string>

</resources>
